--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^7.0.2",
     "@mui/system": "^7.0.2",
     "axios": "^1.9.0",
+    "http-errors": "^2.0.0",
+    "http-status-codes": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0"
