--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
 
     "react-hook-form": "^7.56.3",
     "react-router-dom": "^7.5.0",
-    "yup": "^1.6.1"
-    "react-redux": "^9.2.0",
+    "yup": "^1.6.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
