--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "http-status-codes": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-
     "react-hook-form": "^7.56.3",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
-    "yup": "^1.6.1",
-    "react-redux": "^9.2.0"
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
