--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "prepare": "husky install",
+    "prepush": "npm run build",
     "build": "vite build",
+    "dev": "vite",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -22,11 +24,10 @@
     "http-status-codes": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-
     "react-hook-form": "^7.56.3",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
-    "yup": "^1.6.1",
-    "react-redux": "^9.2.0"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -38,6 +39,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "husky": "^9.1.7",
     "prettier": "^3.5.3",
     "vite": "^6.2.0"
   }
