--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/system": "^7.0.2",
     "@reduxjs/toolkit": "^2.8.1",
     "axios": "^1.9.0",
+    "framer-motion": "^12.14.0",
     "http-errors": "^2.0.0",
     "http-status-codes": "^2.3.0",
     "react": "^19.0.0",
