--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
-    "@mui/icons-material": "^7.1.0",
-    "@mui/material": "^7.0.2",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
     "@mui/system": "^7.0.2",
     "@reduxjs/toolkit": "^2.8.1",
     "axios": "^1.9.0",
@@ -24,10 +24,12 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.18",
     "yup": "^1.6.1"
   },
   "devDependencies": {
